finalizando primera parte tpe web

--- a/productos.html
+++ b/productos.html
@@ -20,17 +20,41 @@
     </nav>
 
     <div class="maincontentpage">
-        <article class="UltimasNoticias">
-            <h2>Noticias y Novedades</h2>
-            <section>
-                <h3>
-                    Nueva línea de perfiles estructurales en acero inoxidable
-                </h3>
-                <p>
-                    Del Sur lanza una nueva gama de perfiles estructurales con alta resistencia y durabilidad para la construcción industrial.
-                </p>
-            </section>
-        </article> 
+    <h2>Catálogo de Productos</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Producto</th>
+                    <th>Descripción</th>
+                    <th>Material</th>
+                    <th>Medidas</th>
+                    <th>Precio (USD)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Perfil U</td>
+                    <td>Perfil estructural en forma de U para construcción</td>
+                    <td>Acero inoxidable</td>
+                    <td>100x50x5 mm</td>
+                    <td>25.00</td>
+                </tr>
+                <tr>
+                    <td>Placa metálica</td>
+                    <td>Placa lisa para soldadura y recubrimiento</td>
+                    <td>Acero al carbono</td>
+                    <td>200x150x10 mm</td>
+                    <td>40.00</td>
+                </tr>
+                <tr>
+                    <td>Tubo cilíndrico</td>
+                    <td>Tubo para estructuras y cañerías</td>
+                    <td>Acero galvanizado</td>
+                    <td>Ø50x3 mm</td>
+                    <td>30.00</td>
+                </tr>
+            </tbody>
+        </table>
 
         <article class="Publicidades">
             <section class="Publicidad">
@@ -43,9 +67,6 @@
                 <p>
                     <a href="contacto.html">Dejanos tu email y nos pondremos en contacto.</a>
                 </p>
-                <p>
-                    Telefono: (111) 000 111
-                </p>
             </section>
         </article>           
     </div>
@@ -54,7 +75,7 @@
         <h4>Del Sur</h4>   
         <h4>Ubicación: Av. Industrial 3223, Ciudad Falsa</h4>
         <h4>Email: contactoventas@delsur.com</h4>
-        <h4>Teléfono: Telefono: (111) 000 111</h4>
+        <h4>Telefono: (111) 000 111</h4>
     </footer>
 </body>
 </html>
