--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>Del Sur</header>
 
     <nav>
-        <button class="btnmenu">Menu</button>
+        <button class="BtnMenu">Menu</button>
         <ul class="Navegacion">
             <li class="OpcionNav"><a class="menu" href="index.html">Inicio</a></li>
             <li class="OpcionNav"><a class="menu" href="productos.html">Productos</a></li>
@@ -19,42 +19,62 @@
     <script src="js/menunav.js"></script>
     </nav>
 
-    <div class="maincontentpage">
+    <main>
         <article class="UltimasNoticias">
             <h2>Noticias y Novedades</h2>
             <section>
                 <h3>
-                    Nueva línea de perfiles estructurales en acero inoxidable
+                    Nueva linea de perfiles estructurales en acero inoxidable
                 </h3>
                 <p>
                     Del Sur lanza una nueva gama de perfiles estructurales con alta resistencia y durabilidad para la construcción industrial.
                 </p>
             </section>
-        </article> 
-
-        <article class="Publicidades">
-            <section class="Publicidad">
+                        <section class="Publicidad">
                 <h3>
                     Buscamos personal calificado
                 </h3>
                 <p>
-                    Incorporamos técnicos y operarios para nuestras plantas de producción.
+                    Incorporamos tecnicos y operarios para nuestras plantas de producción.
                 </p>
                 <p>
                     <a href="contacto.html">Dejanos tu email y nos pondremos en contacto.</a>
                 </p>
-                <p>
-                    Telefono: (111) 000 111
-                </p>
+            </section>
+        </article> 
+
+
+        <article class="Publicidades">
+            <img src="img/Cemento-cp-LomaNegra.png" class="ImgPublicidad">
+            <img src="img/CAT.jpeg" class="ImgPublicidad">
+            <section class="Publicidad">
+            <h3>Nuestros proveedores</h3>
+            <ul>
+                <li>
+                    <a href="https://www.maquinariasindustriales.com">
+                        Maquinarias Industriales S.A.
+                    </a> – Equipos de ultima generacion para la industria metalurgica.
+                </li>
+                <li>
+                    <a href="https://www.logisticafast.com">
+                        Logistica Fast
+                    </a> – Servicios de transporte y distribución rápida a todo el país.
+                </li>
+                <li>
+                    <a href="https://www.tecnicostec.com">
+                        Técnicos Tec
+                    </a> – Asesoramiento tecnico especializado en metalurgia.
+                </li>
+            </ul>
             </section>
         </article>           
-    </div>
+    </main>
 
     <footer>
         <h4>Del Sur</h4>   
-        <h4>Ubicación: Av. Industrial 3223, Ciudad Falsa</h4>
+        <h4>Ubicacion: Av. Industrial 3223, Ciudad Falsa</h4>
         <h4>Email: contactoventas@delsur.com</h4>
-        <h4>Teléfono: Telefono: (111) 000 111</h4>
+        <h4>Telefono: Telefono: (111) 000 111</h4>
     </footer>
 </body>
 </html>
