--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
     <header>Del Sur</header>
 
     <nav>
-        <button class="btnmenu">Menu</button>
+        <button class="BtnMenu">Menu</button>
         <ul class="Navegacion">
             <li class="OpcionNav"><a class="menu" href="index.html">Inicio</a></li>
             <li class="OpcionNav"><a class="menu" href="productos.html">Productos</a></li>
@@ -21,7 +21,7 @@
     </nav>
     <main class="ContactoPag">
         <form action="" id="MenAnonimo">
-            <h3>Para consultas de ventas, hablar directamente a contactoventas@delsur.com. Si no, dejanos tu contacto y el asunto. </h3>
+            <h3>Para consultas de ventas, hablar directamente a contactoventas@delsur.com. Si no, dejanos tu contacto. </h3>
             <input type="text" name="email" placeholder="email" >
             <input type="text" name="asunto" placeholder="Asunto" >
             <input type="text" name="mensaje" placeholder="Introdusca el mensaje" class="Mensaje">
@@ -44,21 +44,29 @@
             <script src="js/contacto.js"></script>
         </form>
         <article class="Publicidades">
+            <img src="img/Cemento-cp-LomaNegra.png" class="ImgPublicidad">
+            <img src="img/CAT.jpeg" class="ImgPublicidad">
             <section class="Publicidad">
-                <h3>
-                    Buscamos personal calificado
-                </h3>
-                <p>
-                    Incorporamos técnicos y operarios para nuestras plantas de producción.
-                </p>
-                <p>
-                  Dejanos tu email y nos pondremos en contacto.
-                </p>
-                <p>
-                    Telefono: (111) 000 111
-                </p>
+            <h3>Nuestros proveedores</h3>
+            <ul>
+                <li>
+                    <a href="https://www.maquinariasindustriales.com">
+                        Maquinarias Industriales S.A.
+                    </a> – Equipos de ultima generacion para la industria metalurgica.
+                </li>
+                <li>
+                    <a href="https://www.logisticafast.com">
+                        Logistica Fast
+                    </a> – Servicios de transporte y distribución rápida a todo el país.
+                </li>
+                <li>
+                    <a href="https://www.tecnicostec.com">
+                        Técnicos Tec
+                    </a> – Asesoramiento tecnico especializado en metalurgia.
+                </li>
+            </ul>
             </section>
-        </article>      
+        </article>    
     </main>
     <footer>
         <h4>Del Sur</h4>   
