--- a/productos.html
+++ b/productos.html
@@ -10,7 +10,7 @@
     <header>Del Sur</header>
 
     <nav>
-        <button class="btnmenu">Menu</button>
+        <button class="BtnMenu">Menu</button>
         <ul class="Navegacion">
             <li class="OpcionNav"><a class="menu" href="index.html">Inicio</a></li>
             <li class="OpcionNav"><a class="menu" href="productos.html">Productos</a></li>
@@ -19,8 +19,8 @@
     <script src="js/menunav.js"></script>
     </nav>
 
-    <div class="maincontentpage">
-    <h2>Catálogo de Productos</h2>
+    <main>
+        <h2>Catálogo de Productos</h2>
         <table>
             <thead>
                 <tr>
@@ -57,19 +57,30 @@
         </table>
 
         <article class="Publicidades">
+            <img src="img/Cemento-cp-LomaNegra.png" class="ImgPublicidad">
+            <img src="img/CAT.jpeg" class="ImgPublicidad">
             <section class="Publicidad">
-                <h3>
-                    Buscamos personal calificado
-                </h3>
-                <p>
-                    Incorporamos técnicos y operarios para nuestras plantas de producción.
-                </p>
-                <p>
-                    <a href="contacto.html">Dejanos tu email y nos pondremos en contacto.</a>
-                </p>
+            <h3>Nuestros proveedores</h3>
+            <ul>
+                <li>
+                    <a href="https://www.maquinariasindustriales.com">
+                        Maquinarias Industriales S.A.
+                    </a> – Equipos de ultima generacion para la industria metalurgica.
+                </li>
+                <li>
+                    <a href="https://www.logisticafast.com">
+                        Logistica Fast
+                    </a> – Servicios de transporte y distribución rápida a todo el país.
+                </li>
+                <li>
+                    <a href="https://www.tecnicostec.com">
+                        Técnicos Tec
+                    </a> – Asesoramiento tecnico especializado en metalurgia.
+                </li>
+            </ul>
             </section>
-        </article>           
-    </div>
+        </article>             
+    </main>
 
     <footer>
         <h4>Del Sur</h4>   
